--- a/Demo/ZerraDemo.Web/Views/Ledger2/Index.cshtml
+++ b/Demo/ZerraDemo.Web/Views/Ledger2/Index.cshtml
@@ -6,7 +6,7 @@
     <h1 class="display-4">Ledger2</h1>
 </div>
 
-<a class="btn btn-primary" asp-controller="Ledger2" asp-action="Transactions">Transactions</a>
+<a class="btn btn-primary" asp-controller="Ledger2" asp-action="Transactions">History</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a class="btn btn-primary" asp-controller="Ledger2" asp-action="Transact">Transact</a>
 <br />
