--- a/Framework/Zerra.T4.TestDev/TypeScript/TypeScriptModels.tt
+++ b/Framework/Zerra.T4.TestDev/TypeScript/TypeScriptModels.tt
@@ -4,15 +4,15 @@
 // Licensed to you under the MIT license
 #>
 <#@ template language="C#" debug="false" hostspecific="true" #>
-<#@ output extension=".js" #>
-<#@ assembly name="Framework\Zerra.T4.DevTest\bin\Release\net48\Zerra.T4.dll" #>
+<#@ output extension=".ts" #>
+<#@ assembly name="Framework\Zerra.T4.TestDev\bin\Release\net48\Zerra.T4.dll" #>
 <#@ import namespace="System.IO" #>
 <#
     var directory = this.Host.ResolvePath(string.Empty);
     while (Directory.GetFiles(directory, "*.sln").Length == 0)
         directory = new DirectoryInfo(directory).Parent.FullName;
 
-    var result = Zerra.T4.CQRSClientDomain.GenerateJavaScript(directory);
+    var result = Zerra.T4.CQRSClientDomain.GenerateTypeScript(directory);
 
 	#><#=result#><#+
 #>
