IBaseProvider Remove, Bus Cache

--- a/Demo/ZerraDemo.Web/Views/Shared/_Layout.cshtml
+++ b/Demo/ZerraDemo.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Weather" asp-action="Index">Weather</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="WeatherCached" asp-action="Index">Weather Cached</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ledger1" asp-action="Index">Ledger1</a>
                         </li>
                         <li class="nav-item">
