--- a/Demo/ZerraDemo.Web/Views/Shared/_Layout.cshtml
+++ b/Demo/ZerraDemo.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ZerraDemo.Web 2021-11-05</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ZerraDemo.Web</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - ZerraDemo.Web
+            &copy; @DateTime.UtcNow.Year - ZerraDemo.Web
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
